# adf-obdd

./: .dockerignore  .gitignore  .gitmodules  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  _config.yml  build.rs  flake.nix  flake.nix~
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codecov.yml  devskim.yml  grcov.yml  pr.yml
docs/: _config.yml  adf-bdd.md  adf_bdd.md  index.md
docs/_data/: navigation.yaml
frontend/: .editorconfig  .eslintrc.js  .gitignore  README.md  index.d.ts  package.json  shell.nix  tsconfig.json
frontend/src/: app.tsx  index.html  legal.html  test-data.ts
frontend/src/components/: adf-details.tsx  adf-new-form.tsx  adf-overview.tsx  app.tsx  footer.tsx  graph-g6.tsx  graph.tsx  loading-context.ts  markdown.tsx  snackbar-context.ts
frontend/src/help-texts/: add-info.md  detail-info.md
gh-pages/: _config.yml  adf_bdd.md  index.md
iccma-2025-bin/: Cargo.toml
iccma-2025-bin/src/: main.rs
lib/: Cargo.toml  README.md  build.rs
lib/src/: adf.rs  adfbiodivine.rs  datatypes.rs  lib.rs  nogoods.rs  obdd.rs  parser.rs
lib/src/adf/: heuristics.rs
lib/src/datatypes/: adf.rs  bdd.rs
lib/src/nogoods/: threevalued.rs  twovalued.rs
lib/src/obdd/: frontend.rs  vectorize.rs
lib/tests/: test_template
scripts/: output_10sec_stmrew.txt  output_base.txt  output_new.txt  output_stmpre_60s.txt  test.sh  times_base.txt  times_new.txt
server/: Cargo.toml  README.md  docker-compose.yml
server/src/: adf.rs  config.rs  double_labeled_graph.rs  main.rs  pmc_vis.rs  user.rs
src/: adf.rs  adfbiodivine.rs  datatypes.rs  lib.rs  main.rs  obdd.rs  obdd2.rs  parser.rs  test.rs
src/datatypes/: adf.rs  bdd.rs
tests/: automated.rs  cli.rs  test_template
