[package]
name = "adf_bdd"
version = "0.2.4"
authors = ["Stefan Ellmauthaler <stefan.ellmauthaler@tu-dresden.de>"]
edition = "2021"
repository = "https://github.com/ellmau/adf-obdd/"
license = "GPL-3.0-only"
exclude = ["res/", "./flake*", "flake.lock", "*.nix", ".envrc", "_config.yml", "tarpaulin-report.*", "*~"]

description = "Library to solve grounded, complete, and stable ADF-semantics by utilising OBDDs - ordered binary decision diagrams"
build = "build.rs"

[lib]
name="adf_bdd"
path = "src/lib.rs"
test = true
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
harness = true         # Use libtest harness.
edition = "2021"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
log = { version = "0.4"}
nom = "7.1.1"
lexical-sort = "0.3.1"
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
biodivine-lib-bdd = "0.3.0"
derivative = "2.2.0"

[dev-dependencies]
test-log = "0.2"
env_logger = "0.9"
quickcheck = "1"
quickcheck_macros = "1"

[features]
default = ["adhoccounting", "variablelist" ]   
adhoccounting = []    # count models ad-hoc - disable if counting is not needed
importexport = []
variablelist = [ "HashSet" ]
HashSet = []